Chore :: 엑티비티 추가

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,15 +5,16 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:usesCleartextTraffic="true"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.SupportPing">
-        <activity android:name=".PostActivity"></activity>
-        <activity android:name=".MyPageActivity"></activity>
+        android:theme="@style/Theme.SupportPing"
+        android:usesCleartextTraffic="true">
+        <activity android:name=".SeeActivity"></activity>
+        <activity android:name=".PostActivity" />
+        <activity android:name=".MyPageActivity" />
         <activity android:name=".AccountActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
